--- a/ios/BulletTime/Base.lproj/Shoot.storyboard
+++ b/ios/BulletTime/Base.lproj/Shoot.storyboard
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -41,7 +40,7 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="375" height="375"/>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="UWh-C5-NpO">
-                                                <rect key="frame" x="30" y="100" width="315" height="189"/>
+                                                <rect key="frame" x="30" y="100" width="315" height="205"/>
                                                 <attributedString key="attributedText">
                                                     <fragment content="This is a camera app for capturing a frozen moment in 3D. Call your friends to install ">
                                                         <attributes>
@@ -87,7 +86,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uw2-Bf-0hz">
-                                                <rect key="frame" x="30" y="259" width="345" height="30"/>
+                                                <rect key="frame" x="30" y="275" width="345" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="FcA-Fy-dUG"/>
                                                 </constraints>
@@ -119,13 +118,13 @@
                                         <rect key="frame" x="0.0" y="375" width="375" height="284"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="to control the shutter for everyone" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="dYA-2z-3Vg">
-                                                <rect key="frame" x="30" y="67" width="315" height="21"/>
+                                                <rect key="frame" x="30" y="70" width="315" height="23"/>
                                                 <fontDescription key="fontDescription" name="Circular-Bold" family="Circular" pointSize="18"/>
                                                 <color key="textColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="One of you is the host" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="7bA-lj-n7j">
-                                                <rect key="frame" x="30" y="30" width="295" height="35"/>
+                                                <rect key="frame" x="30" y="30" width="305.5" height="38"/>
                                                 <fontDescription key="fontDescription" name="Circular-Black" family="Circular" pointSize="30"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
@@ -197,22 +196,31 @@
                                 <rect key="frame" x="0.0" y="375" width="375" height="177"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="to connect each other" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Ete-nA-RGa">
-                                        <rect key="frame" x="30" y="67" width="177" height="21"/>
+                                        <rect key="frame" x="30" y="70" width="183" height="23"/>
                                         <fontDescription key="fontDescription" name="Circular-Bold" family="Circular" pointSize="18"/>
                                         <color key="textColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Turn on Wi-Fi" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ltF-WJ-8PS">
-                                        <rect key="frame" x="30" y="30" width="315" height="35"/>
+                                        <rect key="frame" x="30" y="30" width="192" height="38"/>
                                         <fontDescription key="fontDescription" name="Circular-Black" family="Circular" pointSize="30"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-wifi" translatesAutoresizingMaskIntoConstraints="NO" id="3Pe-o8-6Xr">
+                                        <rect key="frame" x="232" y="38" width="30" height="22.5"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="3Pe-o8-6Xr" secondAttribute="height" multiplier="4:3" id="YoT-gh-GjV"/>
+                                            <constraint firstAttribute="width" constant="30" id="fzd-e0-iUr"/>
+                                        </constraints>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="ltF-WJ-8PS" secondAttribute="trailing" constant="30" id="1DL-E4-jOh"/>
                                     <constraint firstItem="ltF-WJ-8PS" firstAttribute="leading" secondItem="gTZ-JG-laB" secondAttribute="leading" constant="30" id="7Er-i5-LHQ"/>
+                                    <constraint firstItem="3Pe-o8-6Xr" firstAttribute="leading" secondItem="ltF-WJ-8PS" secondAttribute="trailing" constant="10" id="7qk-WQ-da0"/>
                                     <constraint firstItem="Ete-nA-RGa" firstAttribute="top" secondItem="ltF-WJ-8PS" secondAttribute="bottom" constant="2" id="Cf0-m0-dJx"/>
+                                    <constraint firstItem="3Pe-o8-6Xr" firstAttribute="centerY" secondItem="ltF-WJ-8PS" secondAttribute="centerY" id="lhD-Fp-XDc"/>
                                     <constraint firstItem="ltF-WJ-8PS" firstAttribute="top" secondItem="gTZ-JG-laB" secondAttribute="top" constant="30" id="v43-mm-YY0"/>
                                     <constraint firstItem="Ete-nA-RGa" firstAttribute="leading" secondItem="ltF-WJ-8PS" secondAttribute="leading" id="ySF-eU-yyb"/>
                                 </constraints>
@@ -278,7 +286,7 @@
                                         </connections>
                                     </containerView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Freeze it" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="75S-95-BG3">
-                                        <rect key="frame" x="30" y="38" width="114" height="36"/>
+                                        <rect key="frame" x="30" y="38" width="118.5" height="36"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="36" id="tvI-p6-Api"/>
                                         </constraints>
@@ -424,7 +432,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wait and let others join" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rng-KE-CzH">
-                                        <rect key="frame" x="30" y="80" width="184.5" height="21"/>
+                                        <rect key="frame" x="30" y="80" width="194" height="23"/>
                                         <fontDescription key="fontDescription" name="Circular-Bold" family="Circular" pointSize="18"/>
                                         <color key="textColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -617,7 +625,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="32%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1N8-Qq-TRU">
-                                <rect key="frame" x="162" y="319" width="53" height="29.5"/>
+                                <rect key="frame" x="163.5" y="317.5" width="49.5" height="32"/>
                                 <fontDescription key="fontDescription" name="Circular-Black" family="Circular" pointSize="25"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="0.80380097517730498" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -667,7 +675,7 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pick one" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aiv-7Y-NKq">
-                                <rect key="frame" x="30" y="38" width="116.5" height="36"/>
+                                <rect key="frame" x="30" y="38" width="119" height="36"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="36" id="d0d-vw-CuT"/>
                                 </constraints>
@@ -704,7 +712,7 @@
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                             </view>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6S1-qC-yX4" customClass="D">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="B" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6S1-qC-yX4" customClass="D">
                                                 <rect key="frame" x="105" y="5" width="70" height="70"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="70" id="6AJ-Fo-uuc"/>
@@ -714,7 +722,7 @@
                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-0.1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JfJ-fQ-k1O">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JfJ-fQ-k1O">
                                                 <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="80" id="Q77-EZ-rhi"/>
@@ -724,7 +732,7 @@
                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+0.1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mX8-kW-hLp">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="C" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mX8-kW-hLp">
                                                 <rect key="frame" x="200" y="0.0" width="80" height="80"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="80" id="F1A-kH-pki"/>
@@ -827,7 +835,7 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Share the magic" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ece-JK-Ims">
-                                <rect key="frame" x="30" y="30" width="231.5" height="36"/>
+                                <rect key="frame" x="30" y="30" width="232" height="36"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="36" id="F0D-dq-zLU"/>
                                 </constraints>
@@ -850,7 +858,7 @@
                                 <rect key="frame" x="0.0" y="521" width="375" height="146"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lQI-Pf-pOQ">
-                                        <rect key="frame" x="162.5" y="48" width="50" height="50"/>
+                                        <rect key="frame" x="163" y="48" width="50" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="50" id="quw-nM-rVp"/>
                                             <constraint firstAttribute="height" constant="50" id="ueH-uM-dXV"/>
@@ -1038,7 +1046,7 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Freeze it" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zGn-FQ-4tH">
-                                        <rect key="frame" x="30" y="38" width="118.5" height="36"/>
+                                        <rect key="frame" x="30" y="38" width="119" height="36"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="36" id="5qJ-n6-Ic1"/>
                                         </constraints>
@@ -1108,6 +1116,7 @@
         <image name="icon-back-white" width="17" height="10"/>
         <image name="icon-confirm" width="17" height="14"/>
         <image name="icon-share-bold" width="24" height="29"/>
+        <image name="icon-wifi" width="40" height="30"/>
         <image name="image-target" width="375" height="375"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
